--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<img class="img-fluid w-100" src="img/works/work1.jpg" alt="">
 						<div class="projects_text">
 							<a href="portfolio-details.html">
-								<h4>Dimensional analysis using image processing</h4>
+								<h4>Machine vision based dimesional analysis</h4>
 							</a>
 							<p>project</p>
 						</div>
@@ -157,7 +157,7 @@
 						<img class="img-fluid w-100" src="img/works/work5.jpg" alt="">
 						<div class="projects_text">
 							<a href="portfolio-details.html">
-								<h4>Smart security</h4>
+								<h4>Smart security syetem for homes</h4>
 							</a>
 							<p>Project</p>
 						</div>
@@ -179,7 +179,7 @@
 						<img class="img-fluid w-100" src="img/works/work4.jpg" alt="">
 						<div class="projects_text">
 							<a href="portfolio-details.html">
-								<h4>Metal Crack detection using image processing</h4>
+								<h4>Surface deformity detection on glossy metallic surface using Machine Vision</h4>
 							</a>
 							<p>Project</p>
 						</div>
@@ -203,7 +203,7 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							An embedded system and IoT enthusiast with good problem solving , programming and 3D model designing skills who has passion to work in Automotive and Automation industries. Inspired by technologies , I am actively looking for all possible ways to explore new technologies and to upgrade my skills.
+							An embedded system and an IoT enthusiast with good Machine Vision , problem solving and CAD designing skills. I am passionate to work in Embedded , Machine vision and Automation industries. Being inspired by new technologies , I am actively looking for all possible ways to explore and upgrade new skills.
 						</p>
 						<p>Pursuing Innovation Engineer Training at Forge Accelerator
 						</p>
@@ -215,140 +215,14 @@
 	</section>
 	<!--================ End About Area =================-->
 
-	<!--================ Start Testimonial Area =================-->
-	<div class="section_gap testimonial_area">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-7 text-left">
-					<div class="active_testimonial owl-carousel" data-slider-id="1">
-						<!-- single testimonial -->
-						<div class="single_testimonial">
-							<div class="testimonial_head">
-								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
-								<div class="review">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
-							</div>
-						</div>
-
-						<div class="single_testimonial">
-							<div class="testimonial_head">
-								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
-								<div class="review">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
-							</div>
-						</div>
-
-						<div class="single_testimonial">
-							<div class="testimonial_head">
-								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
-								<div class="review">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
-							</div>
-						</div>
-
-						<div class="single_testimonial">
-							<div class="testimonial_head">
-								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
-								<div class="review">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 offset-lg-1">
-					<div class="testimonial_logos">
-						<div class="top_logos">
-							<img src="img/brands/logo1.png" alt="">
-							<img src="img/brands/logo2.png" alt="">
-						</div>
-						<div class="mid_logo">
-							<img src="img/brands/logo3.png" alt="">
-						</div>
-						<div class="bottom_logos jus">
-							<img src="img/brands/logo4.png" alt="">
-							<img src="img/brands/logo5.png" alt="">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--================ End Testimonial Area =================-->
-
 	<!--================ Start Newsletter Area =================-->
 	<section class="section_gap newsletter-area">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-6 text-center">
 					<div class="main-title">
-						<h1>Join Our Newsletter</h1>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may
-							see some for as low as $.17 each.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row newsletter_form justify-content-center">
-				<div class="col-lg-6 col-md-6 col-sm-6">
-					<div class="d-flex flex-row" id="mc_embed_signup">
-						<form class="w-100" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-						 method="get">
-							<div class="navbar-form">
-								<div class="input-group add-on">
-									<input class="form-control" name="EMAIL" placeholder="Your email address" onfocus="this.placeholder = ''"
-									 onblur="this.placeholder = 'Your email address'" required="" type="email">
-									<div style="position: absolute; left: -5000px;">
-										<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-									</div>
-									<div class="input-group-btn">
-										<button class="genric-btn text-uppercase">
-											Subscribe
-										</button>
-									</div>
-								</div>
-							</div>
-							<div class="info mt-20"></div>
-						</form>
-
+						<h1></h1>
+						<p></p>
 					</div>
 				</div>
 			</div>
